Fix padding an margin of anchors for correct jump in mobile view

--- a/scss/librecat.scss
+++ b/scss/librecat.scss
@@ -157,6 +157,11 @@ a.anchor {
     visibility: hidden;
 }
 
+div.anchor {
+    padding-top: 52px;
+    margin-top: -52px;
+}
+
 /* Some margin for row'ed paragraphs */
 
 .row > p {
